--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "5.4.22",
     "multer": "1.4.1",
     "nodemon": "1.18.10",
+    "sharp": "0.22.0",
     "validator": "10.11.0"
   }
 }
